prod_snapshot_2015-09-24_1030/objects/Payment_Processing__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Processing</relationshipLabel>
        <relationshipName>Payment_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Options__c</fullName>
        <label>Billing Options</label>
        <picklist>
            <picklistValues>
                <fullName>Bill Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice/Credit Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memo Bill</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_2_Exp_Month__c</fullName>
        <label>Card #2 Exp Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_2_Exp_Year__c</fullName>
        <label>Card #2 Exp Year</label>
        <picklist>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Card_2_Holder_First_Name__c</fullName>
        <label>Card #2 Holder First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_2_Holder_Last_Name__c</fullName>
        <label>Card #2 Holder Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_2_Security_Code__c</fullName>
        <label>Card #2 Security Code</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Card_Holder_First_Name__c</fullName>
        <label>Card #1 Holder First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Holder_Last_Name__c</fullName>
        <label>Card #1 Holder Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Date_Code__c</fullName>
        <description>IF(

AND(MONTH( X1st_Charge_Date__c ) = MONTH(TODAY()),YEAR(X1st_Charge_Date__c) = YEAR(TODAY())),

TEXT(X1st_Charge_Date__c),

AND
(MONTH( X2nd_Charge_Date__c ) = MONTH(TODAY()),YEAR(X2nd_Charge_Date__c) = YEAR(TODAY())),

TEXT(X2nd_Charge_Date__c),&quot;NO CHARGE&quot;)</description>
        <formula>IF(

AND(MONTH( X1st_Charge_Date__c ) = MONTH(TODAY()),YEAR(X1st_Charge_Date__c) = YEAR(TODAY())),

TEXT(X1st_Charge_Date__c),

IF(

AND
(MONTH( X2nd_Charge_Date__c ) = MONTH(TODAY()),YEAR(X2nd_Charge_Date__c) = YEAR(TODAY())),

TEXT(X2nd_Charge_Date__c),


IF(

AND
(MONTH( X3rd_Charge_Date__c ) = MONTH(TODAY()),YEAR(X3rd_Charge_Date__c) = YEAR(TODAY())),

TEXT(X3rd_Charge_Date__c),

IF(

AND
(MONTH( X4th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X4th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X4th_Charge_Date__c),

IF(

AND
(MONTH( X5th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X5th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X5th_Charge_Date__c),

IF(

AND
(MONTH( X6th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X6th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X6th_Charge_Date__c),

IF(

AND
(MONTH( X7th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X7th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X7th_Charge_Date__c),

IF(

AND
(MONTH( X8th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X8th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X8th_Charge_Date__c),

IF(

AND
(MONTH( X9th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X9th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X9th_Charge_Date__c),

IF(

AND
(MONTH( X10th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X10th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X10th_Charge_Date__c),

IF(

AND
(MONTH( X11th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X11th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X11th_Charge_Date__c),

IF(

AND
(MONTH( X12th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X12th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X12th_Charge_Date__c),

IF(

AND
(MONTH( X13th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X13th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X13th_Charge_Date__c),

IF(

AND
(MONTH( X14th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X14th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X14th_Charge_Date__c),

IF(

AND
(MONTH( X15th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X15th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X15th_Charge_Date__c),

IF(

AND
(MONTH( X16th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X16th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X16th_Charge_Date__c),

IF(

AND
(MONTH( X17th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X17th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X17th_Charge_Date__c),

IF(

AND
(MONTH( X18th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X18th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X18th_Charge_Date__c),

IF(

AND
(MONTH( X19th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X19th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X19th_Charge_Date__c),

IF(

AND
(MONTH( X20th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X20th_Charge_Date__c) = YEAR(TODAY())),

TEXT(X20th_Charge_Date__c),

&quot;NO CHARGE&quot;))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Date Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Date_Date__c</fullName>
        <formula>IF( 

AND(MONTH( X1st_Charge_Date__c ) = MONTH(TODAY()),YEAR(X1st_Charge_Date__c) = YEAR(TODAY())), 

X1st_Charge_Date__c, 

IF( 

AND 
(MONTH( X2nd_Charge_Date__c ) = MONTH(TODAY()),YEAR(X2nd_Charge_Date__c) = YEAR(TODAY())), 

X2nd_Charge_Date__c, 


IF( 

AND 
(MONTH( X3rd_Charge_Date__c ) = MONTH(TODAY()),YEAR(X3rd_Charge_Date__c) = YEAR(TODAY())), 

X3rd_Charge_Date__c, 

IF( 

AND 
(MONTH( X4th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X4th_Charge_Date__c) = YEAR(TODAY())), 

X4th_Charge_Date__c, 

IF( 

AND 
(MONTH( X5th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X5th_Charge_Date__c) = YEAR(TODAY())), 

X5th_Charge_Date__c, 

IF( 

AND 
(MONTH( X6th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X6th_Charge_Date__c) = YEAR(TODAY())), 

X6th_Charge_Date__c, 

IF( 

AND 
(MONTH( X7th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X7th_Charge_Date__c) = YEAR(TODAY())), 


X7th_Charge_Date__c, 

IF( 

AND 
(MONTH( X8th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X8th_Charge_Date__c) = YEAR(TODAY())), 

X8th_Charge_Date__c, 

IF( 

AND 
(MONTH( X9th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X9th_Charge_Date__c) = YEAR(TODAY())), 

X9th_Charge_Date__c, 

IF( 

AND 
(MONTH( X10th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X10th_Charge_Date__c) = YEAR(TODAY())), 

X10th_Charge_Date__c, 

IF( 

AND 
(MONTH( X11th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X11th_Charge_Date__c) = YEAR(TODAY())), 

X11th_Charge_Date__c, 

IF( 

AND 
(MONTH( X12th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X12th_Charge_Date__c) = YEAR(TODAY())), 

X12th_Charge_Date__c, 

IF( 

AND 
(MONTH( X13th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X13th_Charge_Date__c) = YEAR(TODAY())), 

X13th_Charge_Date__c, 

IF( 

AND 
(MONTH( X14th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X14th_Charge_Date__c) = YEAR(TODAY())), 

X14th_Charge_Date__c, 

IF( 

AND 
(MONTH( X15th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X15th_Charge_Date__c) = YEAR(TODAY())), 

X15th_Charge_Date__c, 

IF( 

AND 
(MONTH( X16th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X16th_Charge_Date__c) = YEAR(TODAY())), 

X16th_Charge_Date__c, 

IF( 

AND 
(MONTH( X17th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X17th_Charge_Date__c) = YEAR(TODAY())), 

X17th_Charge_Date__c, 

IF( 

AND 
(MONTH( X18th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X18th_Charge_Date__c) = YEAR(TODAY())), 

X18th_Charge_Date__c, 

IF( 

AND 
(MONTH( X19th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X19th_Charge_Date__c) = YEAR(TODAY())), 

X19th_Charge_Date__c, 

IF( 

AND 
(MONTH( X20th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X20th_Charge_Date__c) = YEAR(TODAY())), 

X20th_Charge_Date__c, 

DATE(1900,01,01)))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Date Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <formula>Charge_Date_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Month_YesorNo__c</fullName>
        <formula>IF
(
OR
(
AND(MONTH( X1st_Charge_Date__c ) = MONTH(TODAY()),YEAR(X1st_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X2nd_Charge_Date__c ) = MONTH(TODAY()),YEAR(X2nd_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X3rd_Charge_Date__c ) = MONTH(TODAY()),YEAR(X3rd_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X4th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X4th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X5th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X5th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X6th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X6th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X7th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X7th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X8th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X8th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X9th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X9th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X10th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X10th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X11th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X11th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X12th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X12th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X13th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X13th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X14th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X14th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X15th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X15th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X16th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X16th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X17th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X17th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X18th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X18th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X19th_Charge_Date__c ) = MONTH(TODAY()),YEAR(X19th_Charge_Date__c) = YEAR(TODAY())),
AND(MONTH( X20th_Charge_Date__c ) = MONTH(TODAY())),YEAR(X20th_Charge_Date__c) = YEAR(TODAY())),
&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Month Yes or No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_by_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check by Phone?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_Payments__c</fullName>
        <description>Sum of completed, non-declined payment Entries</description>
        <label>Completed Payments</label>
        <summarizedField>Payment_Entries__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment_Entries__c.Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment_Entries__c.Declined__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment_Entries__c.CC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Card_2_Type__c</fullName>
        <label>Credit Card #2 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Card_2__c</fullName>
        <inlineHelpText>Enter numbers only, no dashes</inlineHelpText>
        <label>Credit Card #2 Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <inlineHelpText>Enter numbers only, no dashes</inlineHelpText>
        <label>Credit Card #1 Number</label>
        <length>16</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card #1 Type</label>
        <picklist>
            <picklistValues>
                <fullName>Visa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Month_Charged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Month Charged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cycles__c</fullName>
        <label>Cycles</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Account__c</fullName>
        <formula>IF(Opportunity__r.Digital_Products_Notice__c = True,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>Date After Which Charges Will No Longer Be Applied.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Cycle__c</fullName>
        <label>Entry Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entry_Payment_Total__c</fullName>
        <label>Entry Payment Total</label>
        <summarizedField>Payment_Entries__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment_Entries__c.Declined__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment_Entries__c.CC__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Entry_Processor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entry Processor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Payment_Processing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exp_Month__c</fullName>
        <label>Card #1 Exp Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exp_Year__c</fullName>
        <label>Card #1 Exp Year</label>
        <picklist>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Charge_Date__c</fullName>
        <label>First Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Charge_Day__c</fullName>
        <label>First Charge Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Made_On__c</fullName>
        <label>Last Payment Made On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Month_Day__c</fullName>
        <formula>IF(MONTH(TODAY()) &lt;= 11, DATE(YEAR(TODAY()),MONTH(TODAY()) + 1,1),DATE(YEAR(TODAY()) + 1, 1,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Month Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Owner__c</fullName>
        <formula>Opportunity__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Total_Value__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payment Processing</relationshipLabel>
        <relationshipName>Credit_Card_Processing</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Package_Duration__c</fullName>
        <label>Package Duration</label>
        <picklist>
            <picklistValues>
                <fullName>3 Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Notes__c</fullName>
        <label>Payment Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <formula>&quot;&apos;The length of your contract is determined by the package selected. Your credit card will be charged on a monthly basis during this period and you will receive confirmation by mail.  Should you decide to cancel, you will be charged the next month before cancellation takes effect.  Package upgrades are allowed any time.&apos;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Policy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Status__c</fullName>
        <label>Processing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Captured</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reminder_Target__c</fullName>
        <label>Reminder Target</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reset_Charge_Reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to have the Charge reminders &apos;FROM&apos; sent in your name.</inlineHelpText>
        <label>Reset Charge Reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset_Entries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Routing_Number__c</fullName>
        <label>Routing Number</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <label>Card #1 Security Code</label>
        <length>4</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>X10th_Charge_Date__c</fullName>
        <label>10th Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X10th_Check_Charge__c</fullName>
        <label>10th Check Charge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X11th_Charge_Date__c</fullName>
        <label>11th Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X11th_Check_Charge__c</fullName>
        <label>11th Check Charge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X12th_Charge_Date__c</fullName>
        <label>12th Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X12th_Check_Charge__c</fullName>
        <label>12th Check Charge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Charge_Date__c</fullName>
        <description>The first time the customer&apos;s card is charged</description>
        <label>1st Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Check_Charge__c</fullName>
        <label>1st Check Charge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Charge_Date__c</fullName>
        <label>2nd Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Check_Charge__c</fullName>
        <label>2nd Check Charge</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Charge_Date__c</fullName>
        <label>3rd Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Check_Charge__c</fullName>
        <label>3rd Check Charge</label>
        <type>Date</type>
    </fields>
    <label>Payment Processing</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Credit Card Processing</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Processing</pluralLabel>
    <recordTypes>
        <fullName>Check_Processing</fullName>
        <active>true</active>
        <description>This is for processing checks</description>
        <label>Check Processing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card_Processing</fullName>
        <active>true</active>
        <description>This is for processing credit cards</description>
        <label>Credit Card Processing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_OR_Cycle_Count</fullName>
        <active>true</active>
        <description>Requires that only one or the other is selected.</description>
        <errorConditionFormula>AND(NOT(ISNULL(End_Date__c)), NOT(TEXT(Cycles__c) = Null))</errorConditionFormula>
        <errorDisplayField>Cycles__c</errorDisplayField>
        <errorMessage>You Need To Enter EITHER An End Date OR A Cycle Count, But Not Both.  Please Clear One Or The Other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PackageDateForce</fullName>
        <active>false</active>
        <errorConditionFormula>OR(

AND( 
ISPICKVAL(Package_Duration__c ,&quot;&quot;), 
NOT(ISNULL(First_Charge_Date__c ))),

AND(
NOT(ISPICKVAL(Package_Duration__c,&quot;&quot;)),
ISNULL(First_Charge_Date__c ))

)</errorConditionFormula>
        <errorMessage>Package Duration can&apos;t be blank if First Charge Date is not blank and vice versa.</errorMessage>
    </validationRules>
</CustomObject>